Fix align nav panel

--- a/sass/blocks/_navbar.sass
+++ b/sass/blocks/_navbar.sass
@@ -7,7 +7,7 @@
     &-wrap
         display: flex
         align-items: center
-        justify-content: space-around
+        justify-content: space-between
     &__mobile, &__landline
         text-align: right
     &__phone
